Change log
2018-04-18
1. Added free T4 and free T3 values to return from the solver

2018-02-04
1. Added .gitignore file

2017-03-28
1. Added stand alone Matlab m file for repeated oral dosing

2016-12-12
1. Updated version number
2. Switched default solver to Java ODE solver

2016-12-04
1. Added Java ODE solver

2016-03-28
1. Added 2016 Thyrosim paper to references
2. Changed order of references
3. Removed some hardcoded path

2015-12-01
1. Added License.docx
2. Minor formatting changes

2015-11-23
1. Added THYROSIM stand alone Matlab/Octave m files
2. Added disclaimer
3. Bit more documentation and general maintenance

2015-11-20
1. Added link to DiStefano Lab page
2. Added link to code repository
3. Updated parameter values in the SBML code

2015-10-19
1. Removed password protection
2. Added Google Analytics to index

2015-06-01:
1. Set Y-axis minimums so the default range is always visible:
   T4 = 120, T3 = 2, TSH = 5
2. Updated version number to 1.2

2015-05-25:
1. Extended default T4 Y-axis to 120.
2. Changed the way Y-axes are calculated given max Y-value.
3. Changed p48/VTSH to 5.2.

2015-05-22:
1. Changed T4 normal range from 45 - 120 to 45 - 105.
2. Changed T3 normal range from 0.75 - 1.8 to 0.6 - 1.8.
3. Changed TSH normal range from 0.3 - 4.7 to 0.4 - 4.

2015-02-25:
1. Changed SS IC to a that derived from a run using a Java-based ODE solver.
   Octave apparently produces unstable results.
2. Rounded execution time down to the nearest whole second.
3. Turned on normal range by default.
4. Fixed a bug where normal range turns off after a run.
5. Fixed a bug where recalculating IC didn't work.

2014-09-01:
1. Fixed a phenomenon where simulated values did not start at steady state.
2. Added a "close" button within "About" and "Example".

2014-02-23:
1. VTSH to 4.3
2. Tooltip now shows hormone values more prominently
3. Added button to toggle normal range of each hormone

2013-11-09:
1. Updated graphing util from protovis to d3, for IE9+ support.