@@ -1,4 +1,8 @@
 Change log
+2018-04-19
+1. Added free T4 and free T3 graphs, with button to toggle them
+2. Enlarged graph area and other minor formatting changes
+
 2018-04-18
 1. Added free T4 and free T3 values to return from the solver
 
